更新插件版本至2.1.3版本 1、新增生成web二维码功能、实现扫码跳转到内容分享页面，并支持保存png图片到本地磁盘<br> 2、新增png图片保存到磁盘成功的提示<br> 3、优化稳定性和用户交互体验<br>